# egui_node_graph

egui_node_graph_example/: Cargo.toml  test.csv
egui_node_graph_example/src/: app.rs  main.rs
